# Music-Player

./: README.md
BigProject/: CMakeLists.txt  action.cpp  action.h  exception.cpp  exception.h  filerepository.cpp  filerepository.h  filerepositorytest.cpp  filerepositorytest.h  main.cpp  mainwindow.cpp  mainwindow.h  playlist.cpp  playlist.h  repository.cpp  repository.h  repositorytest.cpp  repositorytest.h  song.cpp  song.h  songcontroller.cpp  songcontroller.h  songcontrollertest.cpp  songcontrollertest.h
